Fixing icons on mobile view

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -616,7 +616,7 @@ textarea {
 
   &:after {
     @include vendor('transition', 'opacity 0.25s ease-in-out');
-    background-image: url('images/overlay.png');
+    background-image: url('../css/images/overlay.png');
     content: '';
     display: block;
     height: 100%;
@@ -1091,8 +1091,8 @@ input[type='button'],
 
 #header {
   background-attachment: scroll, scroll, fixed;
-  background-image: url('images/top-3200.svg'), url('images/overlay.png'),
-    url('../../images/header.jpg');
+  background-image: url('../css/images/top-3200.svg'),
+    url('../css/images/overlay.png'), url('../../images/header.jpg');
   background-position: bottom center, top left, center center;
   background-repeat: repeat-x, repeat, no-repeat;
   background-size: 3200px 460px, auto, cover;
@@ -1190,7 +1190,7 @@ input[type='button'],
 #footer {
   background-attachment: scroll;
   background-color: _palette(accent1, bg);
-  background-image: url('images/bottom-3200.svg');
+  background-image: url('../css/images/bottom-3200.svg');
   background-position: top center;
   background-repeat: repeat-x;
   background-size: 3200px 460px;
@@ -1435,8 +1435,8 @@ input[type='button'],
 
   #header {
     background-attachment: scroll, scroll, scroll;
-    background-image: url('images/top-1600.svg'), url('images/overlay.png'),
-      url('../../images/header.jpg');
+    background-image: url('../css/images/top-1600.svg'),
+      url('../css/images/overlay.png'), url('../../images/header.jpg');
     background-size: 1600px 230px, auto, cover;
     padding: 6em 0 12em 0;
 
@@ -1460,7 +1460,7 @@ input[type='button'],
   /* Footer */
 
   #footer {
-    background-image: url('images/bottom-1600.svg');
+    background-image: url('../css/images/bottom-1600.svg');
     background-size: 1600px 230px;
     margin-top: -100px;
     padding: calc(230px + 4em) 0 6em 0;
@@ -1594,8 +1594,8 @@ input[type='button'],
   /* Header */
 
   #header {
-    background-image: url('images/top-1280.svg'), url('images/overlay.png'),
-      url('../../images/header.jpg');
+    background-image: url('../css/images/top-1280.svg'),
+      url('../css/images/overlay.png'), url('../../images/header.jpg');
     background-size: 1280px 184px, auto, cover;
     padding: 3em 0 7em 0;
 
@@ -1623,7 +1623,7 @@ input[type='button'],
   /* Footer */
 
   #footer {
-    background-image: url('images/bottom-1280.svg');
+    background-image: url('../css/images/bottom-1280.svg');
     background-size: 1280px 184px;
     margin-top: -75px;
     padding: calc(184px + 2em) 0 2em 0;
